Fixed the save Button on smaller screen

--- a/style.css
+++ b/style.css
@@ -90,5 +90,7 @@ body{
   .hideOnSmall{
     display: none;
   } 
-
+.extendOnSmall{
+  width: 100%;
+}
 }
